icons importados de la forma optimizada (falta refactorizarlos)

--- a/src/Layouts/Layout.astro
+++ b/src/Layouts/Layout.astro
@@ -36,7 +36,7 @@ if (align == "right") {
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" href="../assets/logos/adardev_logo.svg">
+    <link rel="icon" href="/src/assets/logos/adardev_logo.svg">
     <meta name="generator" content={Astro.generator}/>
     <title>adardev</title>
     <ClientRouter/>
