--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,10 @@ import ButtonToolTip from "/src/components/buttonToolTip.astro";
 import ButtonExpand from "/src/components/buttonExpand.astro";
 import Text from "../components/text.astro";
 import Profile_Photo from "../assets/photos/profile_photo.jpg";
+import Github_logo from "../assets/logos/github_logo.svg";
+import Linkedin_logo from "../assets/logos/linkedin_logo.svg";
+import Email_icon from "../assets/icons/email_icon.svg";
+import Map_icon from "../assets/icons/map_icon.svg";
 
 ---
 <Layout align="center">
@@ -27,10 +31,10 @@ import Profile_Photo from "../assets/photos/profile_photo.jpg";
             </div>
         </div>
         <div class="flex flex-row gap-5 justify-start">
-            <ButtonExpand link="https://github.com/adardev" iconSrc="/src/assets/logos/github_logo.svg" label="/adardev" hoverClass="hover:w-[7.2rem]" altIconSrc={null}/>
-            <ButtonExpand link="https://www.linkedin.com/in/adardev" iconSrc="/src/assets/logos/linkedin_logo.svg" label="/in/adardev" hoverClass="hover:w-[8.3rem]"/>
-            <ButtonExpand link="mailto:adarlopz.dev@gmail.com" iconSrc="/src/assets/icons/email_icon.svg" label="adarlopz.dev@gmail.com" hoverClass="hover:w-[16rem]" altIconSrc="/src/assets/icons/email_icon.svg"/>
-            <ButtonExpand link="https://maps.app.goo.gl/jgDoBZkpe1rsiSNm7" iconSrc="/src/assets/icons/map_icon.svg" label="Guadalajara, México" hoverClass="hover:w-[11.8rem]"/>
+            <ButtonExpand link="https://github.com/adardev" iconSrc={Github_logo} label="/adardev" hoverClass="hover:w-[7.2rem]" altIconSrc={null}/>
+            <ButtonExpand link="https://www.linkedin.com/in/adardev" iconSrc={Linkedin_logo} label="/in/adardev" hoverClass="hover:w-[8.3rem]"/>
+            <ButtonExpand link="mailto:adarlopz.dev@gmail.com" iconSrc={Email_icon} label="adarlopz.dev@gmail.com" hoverClass="hover:w-[16rem]" altIconSrc="/src/assets/icons/email_icon.svg"/>
+            <ButtonExpand link="https://maps.app.goo.gl/jgDoBZkpe1rsiSNm7" iconSrc={Map_icon} label="Guadalajara, México" hoverClass="hover:w-[11.8rem]"/>
         </div>
     </Section>
     <About/>
