--- a/src/sections/about.astro
+++ b/src/sections/about.astro
@@ -2,9 +2,10 @@
 import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
 import Text from "/src/components/text.astro";
+import Profile_icon from "../assets/icons/profile_icon.svg";
 ---
 <Section id="about" mt="true" mb="true">
-    <TitleSection imageSrc="/src/assets/icons/profile_icon.svg" imageAlt="Ícono de perfil" title="Sobre Mi"/>
+    <TitleSection imageSrc={Profile_icon} title="Sobre Mi"/>
     <div>
         <Text text="Desarrollador en formación, sin experiencia profesional pero con una gran pasión por la programación y la tecnología. Motivado por el aprendizaje, con ganas de crecer y aportar mis conocimientos a proyectos innovadores." type="text" />
     </div>
