--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -2,9 +2,10 @@
 import Freelance from "./experiences/freelance.astro";
 import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
+import Portfolio_icon from "../assets/icons/portfolio_icon.svg";
 ---
 <Section id="experience" mt="true" mb="true">
-    <TitleSection imageSrc="/src/assets/icons/portfolio_icon.svg" imageAlt="Ícono de perfil" title="Experiencia"/>
+    <TitleSection imageSrc={Portfolio_icon} title="Experiencia"/>
     <div class="container mx-auto">
         <div class="relative border-l-4 border-primary ml-5">
             <Freelance/>
