--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,25 +14,30 @@ import Github_logo from "../assets/logos/github_logo.svg";
 import Linkedin_logo from "../assets/logos/linkedin_logo.svg";
 import Email_icon from "../assets/icons/email_icon.svg";
 import Map_icon from "../assets/icons/map_icon.svg";
+import Phone_icon from "../assets/icons/profile_icon.svg";
 ---
 <Layout align="center">
     <Section mt="true">
-        <div class="flex flex-row gap-10 mb-8">
-            <div class="w-24 h-20 rounded-full overflow-hidden shadow-lg">
-                <Image src={Profile_Photo} alt=""/>
+        <div class="flex flex-col sm:flex-row gap-6 sm:gap-10 mb-8">
+            <div class="w-24 h-24 sm:w-32 sm:h-32 rounded-full overflow-hidden shadow-lg mx-auto sm:mx-0 flex-shrink-0">
+                <Image src={Profile_Photo} alt="" class="object-cover w-full h-full"/>
             </div>
-            <div class="flex flex-row justify-between w-full">
-                <div class="flex flex-col">
+            <div class="flex flex-col sm:flex-row justify-between w-full">
+                <div class="flex flex-col items-center sm:items-start">
                     <Text type="title" text="Hola, soy adardev"/>
                     <Text type="subtitle" text="Desarrollador Web y Movil"/>
                 </div>
-                <ButtonToolTip iconSrc="/src/assets/icons/cv_icon.svg" label="Ver curriculum Vitae" link="/cvs/adardevCV.pdf"/>
+                <div class="mt-4 sm:mt-0 flex justify-center sm:justify-end">
+                  <ButtonToolTip iconSrc="/src/assets/icons/cv_icon.svg" label="Ver curriculum Vitae" link="/cvs/adardevCV.pdf"/>
+                </div>
             </div>
         </div>
-        <div class="flex flex-row gap-5 justify-start">
+        <div class="flex flex-col sm:flex-row gap-4 sm:gap-5 justify-center sm:justify-start">
             <ButtonExpand link="https://github.com/adardev" iconSrc={Github_logo} label="/adardev" hoverClass="hover:w-[7.2rem]" altIconSrc={null}/>
             <ButtonExpand link="https://www.linkedin.com/in/adardev" iconSrc={Linkedin_logo} label="/in/adardev" hoverClass="hover:w-[8.3rem]"/>
+            <ButtonExpand link="phoneto:+52" iconSrc={Phone_icon} label="/@adar-dev" hoverClass="hover:w-[11.8rem]"/>
             <ButtonExpand link="mailto:adarlopz.dev@gmail.com" iconSrc={Email_icon} label="adarlopz.dev@gmail.com" hoverClass="hover:w-[16rem]" altIconSrc="/src/assets/icons/email_icon.svg"/>
+            <ButtonExpand link="phoneto:+52" iconSrc={Phone_icon} label="+52 5512 3456" hoverClass="hover:w-[11.8rem]"/>
             <ButtonExpand link="https://maps.app.goo.gl/jgDoBZkpe1rsiSNm7" iconSrc={Map_icon} label="Guadalajara, México" hoverClass="hover:w-[11.8rem]"/>
         </div>
     </Section>
