--- a/src/sections/skills.astro
+++ b/src/sections/skills.astro
@@ -406,27 +406,23 @@ import Portfolio_icon from "../assets/icons/portfolio_icon.svg";
         </div>
         <div class="flex flex-row bg-[#002a2e] m-8 mb-0 mx-0 p-4 mt-0 gap-4 ">
             <a class="group [perspective:1000px] cursor-pointer">
-                <div class="relative w-24 h-24 transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
-
-                    <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [backface-visibility:hidden]">
-                        <img src="/src/assets/logos/photoshop_logo.svg" class="w-16 h-16" alt="Angular Logo"/>
+                <div class="relative w-20 h-20 md:w-24 md:h-24 transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
+                    <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-3 md:p-4 flex items-center justify-center [backface-visibility:hidden]">
+                        <img src="/src/assets/logos/photoshop_logo.svg" class="w-12 h-12 md:w-16 md:h-16" alt="Photoshop Logo"/>
                     </div>
-
-                    <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
+                    <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-3 md:p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
                         <Text text="Photoshop" type="text" />
                     </div>
                 </div>
             </a>
         </div>
-        <div class="flex flex-row bg-[#002a2e] m-8 ml-0 mb-0 p-4 mt-0 gap-4 rounded-r-3xl">
+        <div class="flex flex-row bg-[#002a2e] m-8 mb-0 mx-0 p-4 mt-0 gap-4 rounded-r-3xl">
             <a class="group [perspective:1000px] cursor-pointer">
-                <div class="relative w-24 h-24 transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
-
-                    <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [backface-visibility:hidden]">
-                        <img src="/src/assets/logos/xd_logo.svg" class="w-16 h-16" alt="Angular Logo"/>
+                <div class="relative w-20 h-20 md:w-24 md:h-24 transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
+                    <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-3 md:p-4 flex items-center justify-center [backface-visibility:hidden]">
+                        <img src="/src/assets/logos/xd_logo.svg" class="w-12 h-12 md:w-16 md:h-16" alt="XD Logo"/>
                     </div>
-
-                    <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
+                    <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-3 md:p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
                         <Text text="XD" type="text" />
                     </div>
                 </div>
