svg defs deleted

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import ButtonExpand from "/src/components/buttonExpand.astro";
 import Text from "../components/text.astro";
 import Profile_Photo from "../assets/photos/profile_photo.jpg";
 import Github_logo from "../assets/logos/github_logo.svg";
-import Youtube_logo from "../assets/logos/youtube_logo.svg";
+import Youtube_icon from "../assets/icons/youtube_icon.svg";
 import Linkedin_logo from "../assets/logos/linkedin_logo.svg";
 import Email_icon from "../assets/icons/email_icon.svg";
 import Map_icon from "../assets/icons/map_icon.svg";
@@ -38,8 +38,8 @@ import adardev_logo from "../assets/logos/adardev_logo.svg";
             <ButtonExpand link="https://adardev.com" iconSrc={adardev_logo} label="adardev.com" hoverClass="hover:w-[8.3rem]"/>
             <ButtonExpand link="https://github.com/adardev" iconSrc={Github_logo} label="/adardev" hoverClass="hover:w-[7.2rem]" altIconSrc={null}/>
             <ButtonExpand link="https://www.linkedin.com/in/adardev" iconSrc={Linkedin_logo} label="/in/adardev" hoverClass="hover:w-[8.3rem]"/>
-            <ButtonExpand link="https://www.youtube.com/@adardev1" iconSrc={Youtube_logo} label="/efwfwef" hoverClass="hover:w-[11.8rem]"/>
-            <ButtonExpand link="https://maps.app.goo.gl/jgDoBZkpe1rsiSNm7" iconSrc={Map_icon} label="Guadalajara, México" hoverClass="hover:w-[11.8rem]"/>
+            <ButtonExpand link="https://www.youtube.com/@adardev1" iconSrc={Youtube_icon} label="/efwfwef" hoverClass="hover:w-[7.8rem]"/>
+            <ButtonExpand link="https://maps.app.goo.gl/jgDoBZkpe1rsiSNm7" iconSrc={Map_icon} label="Guadalajara, México" hoverClass="hover:w-[12.8rem]"/>
             <ButtonExpand link="mailto:adarlopz.dev@gmail.com" iconSrc={Email_icon} label="adarlopz.dev@gmail.com" hoverClass="hover:w-[16rem]" altIconSrc="/src/assets/icons/email_icon.svg"/>
             <ButtonExpand link="tel:+" iconSrc={Phone_icon} label="+52 5512 3456" hoverClass="hover:w-[11.8rem]"/>
         </div>
