some section component used and init from astro image optimization in some pages/components

--- a/src/components/buttonToolTip.astro
+++ b/src/components/buttonToolTip.astro
@@ -1,5 +1,6 @@
 ---
 const {iconSrc, label, link} = Astro.props;
+import { Image } from 'astro:assets';
 ---
 <a href={link} class="relative group">
     <div class="bg-[#002a2e] rounded-2xl p-3 hover:brightness-150 transition duration-200">
