--- a/src/components/project.astro
+++ b/src/components/project.astro
@@ -1,6 +1,7 @@
 ---
 const {name, logo, platforms, technologies, description, demoImg, href, repo}
 import Text from "../components/text.astro";
+import { Image } from 'astro:assets';
 import Section from "../components/section.astro";
 import Button from "../components/button.astro";
 import { Image } from 'astro:assets';
