--- a/src/sections/about.astro
+++ b/src/sections/about.astro
@@ -6,7 +6,7 @@ import Profile_icon from "../assets/icons/profile_icon.svg";
 ---
 <Section id="about" mt="true" mb="true">
     <TitleSection imageSrc={Profile_icon} title="Sobre Mi"/>
-    <div>
+    <Section>
         <Text text="Desarrollador en formación, sin experiencia profesional pero con una gran pasión por la programación y la tecnología. Motivado por el aprendizaje, con ganas de crecer y aportar mis conocimientos a proyectos innovadores." type="text" />
-    </div>
+    </Section>
 </Section>
