--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -3,6 +3,7 @@ import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
 import Text from "/src/components/text.astro";
 import Code_icon from "../assets/icons/code_icon.svg";
+import { Image } from 'astro:assets';
 ---
 <Section id="projects" mt="true" mb="true">
     <TitleSection imageSrc={Code_icon} title="Proyectos"/>
