--- a/src/sections/skills.astro
+++ b/src/sections/skills.astro
@@ -3,6 +3,7 @@ import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
 import Text from "/src/components/text.astro";
 import Portfolio_icon from "../assets/icons/portfolio_icon.svg";
+import { Image } from 'astro:assets';
 ---
 <Section id="skills" mt="true" mb="true">
     <TitleSection imageSrc={Portfolio_icon} title="Habilidades"/>
