--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -6,9 +6,9 @@ import Portfolio_icon from "../assets/icons/portfolio_icon.svg";
 ---
 <Section id="experience" mt="true" mb="true">
     <TitleSection imageSrc={Portfolio_icon} title="Experiencia"/>
-    <div class="container mx-auto">
-        <div class="relative border-l-4 border-primary ml-5">
+    <Section extraClass="container mx-auto">
+        <Section extraClass="relative border-l-4 border-primary ml-5">
             <Freelance/>
-        </div>
-    </div>  
+        </Section>
+    </Section>
 </Section>
