svg components used in all sections

--- a/src/sections/about.astro
+++ b/src/sections/about.astro
@@ -1,7 +1,7 @@
 ---
-import TitleSection from "/src/components/titleSection.astro";
-import Section from "/src/components/section.astro";
-import Text from "/src/components/text.astro";
+import TitleSection from "../components/titleSection.astro";
+import Section from "../components/section.astro";
+import Text from "../components/text.astro";
 import Profile_icon from "../assets/icons/profile_icon.svg";
 ---
 <Section id="about" mt="true" mb="true">
