--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -1,7 +1,7 @@
 ---
 import Freelance from "./experiences/freelance.astro";
-import TitleSection from "/src/components/titleSection.astro";
-import Section from "/src/components/section.astro";
+import TitleSection from "../components/titleSection.astro";
+import Section from "../components/section.astro";
 import Portfolio_icon from "../assets/icons/portfolio_icon.svg";
 ---
 <Section id="experience" mt="true" mb="true">
