--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -1,42 +1,51 @@
 ---
-import TitleSection from "/src/components/titleSection.astro";
-import Section from "/src/components/section.astro";
-import Text from "/src/components/text.astro";
+import TitleSection from "..//components/titleSection.astro";
+import Section from "../components/section.astro";
+import Text from "../components/text.astro";
 import Code_icon from "../assets/icons/code_icon.svg";
 import { Image } from 'astro:assets';
+import Web_icon from "../assets/icons/web_icon.svg";
+import Adardev_logo from "../assets/logos/adardev_logo.svg";
+import Github_logo from "../assets/logos/github_logo.svg";
+import Tailwind_logo from "../assets/logos/tailwind_logo.svg";
+import Php_logo from "../assets/logos/php_logo.svg";
+import Electron_logo from "../assets/logos/electron_logo.svg"
+import Sql_logo from "../assets/logos/sql_logo.svg";
+import Windows_logo from "../assets/logos/windows_logo.svg";
+import Astro_logo from "../assets/logos/astro_logo.svg";
 ---
 <Section id="projects" mt="true" mb="true">
     <TitleSection imageSrc={Code_icon} title="Proyectos"/>
     <div class="w-full max-w-[1400px] px-4 mx-auto flex flex-col gap-10 items-center justify-center">
         <div class="w-full bg-backgroundPrimary rounded-2xl p-5 flex flex-col md:flex-row gap-6 shadow-xl">
             <div class="w-full md:w-1/2 h-[250px] bg-white rounded-xl overflow-hidden flex items-center justify-center">
-                <img src="/src/assets/demos/tekkure_demo.jpg" alt="Preview Densora" class="object-cover w-full h-full"/>
+                <Image src="/src/assets/demos/tekkure_demo.jpg" class="object-cover w-full h-full" alt=""/>
             </div>
             <div class="w-full md:w-1/2 flex flex-col gap-4 justify-between">
                 <div class="flex flex-row justify-between flex-wrap">
                     <div class="flex flex-row items-center gap-5">
-                        <img src="/src/assets/logos/adardev_logo.svg" width="50px" alt="Logo"/>
+                        <Adardev_logo width="50px"/>
                         <Text text="Spotify" type="title" />
                     </div>
                     <div class="flex flex-row mt-4 sm:mt-0">
                         <div class="flex flex-row gap-2">
-                            <img src="/src/assets/icons/web_icon.svg" width="30px" alt="Android"/>
+                            <Web_icon width="30px"/>
                         </div>
                         <div class="w-[2px] h-auto rounded-2xl bg-white mx-4"></div>
                         <div class="flex flex-row gap-2">
-                            <img src="/src/assets/logos/astro_logo.svg" width="30px" alt="NodeJS"/>
-                            <img src="/src/assets/logos/tailwind_logo.svg" width="30px" alt="Tailwind"/>
+                            <Astro_logo width="30px"/>
+                            <Tailwind_logo width="30px"/>
                         </div>
                     </div>
                 </div>
                 <Text text="Aplicación que muestra estadísticas personalizadas sobre tus hábitos de escucha en Spotify y te conecta con personas con gustos musicales similares." type="text" />
                 <div class="flex justify-between">
                     <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
-                        <img src="/src/assets/logos/github_logo.svg" width="25px" alt="GitHub"/>
+                        <Github_logo width="25px"/>
                         <Text text="Ver código" type="mini" />
                     </div>
                     <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
-                        <img src="/src/assets/icons/web_icon.svg" class="w-[25px]" alt="Sitio Web"/>
+                        <Web_icon width="25px"/>
                         <Text text="Visitar" type="mini" />
                     </div>
                 </div>
@@ -49,29 +58,29 @@ import { Image } from 'astro:assets';
             <div class="w-full md:w-1/2 flex flex-col gap-4 justify-between">
                 <div class="flex flex-row justify-between flex-wrap">
                     <div class="flex flex-row items-center gap-5">
-                        <img src="/src/assets/logos/adardev_logo.svg" width="50px" alt="Logo"/>
+                        <Adardev_logo width="50px"/>
                         <Text text="Bytemana" type="title" />
                     </div>
                     <div class="flex flex-row mt-4 sm:mt-0">
                         <div class="flex flex-row gap-2">
-                            <img src="/src/assets/logos/windows_logo.svg" width="30px" alt="Windows"/>
+                            <Windows_logo width="30px"/>
                         </div>
                         <div class="w-[2px] h-auto rounded-2xl bg-white mx-4"></div>
                         <div class="flex flex-row gap-2">
-                            <img src="/src/assets/logos/php_logo.svg" width="30px" alt="C++"/>
-                            <img src="/src/assets/logos/electron_logo.svg" width="30px" alt="Astro"/>
-                            <img src="/src/assets/logos/sql_logo.svg" width="30px" alt="React"/>
+                            <Php_logo width="30px"/>
+                            <Electron_logo width="30px"/>
+                            <Sql_logo width="30px"/>
                         </div>
                     </div>
                 </div>
                 <Text text="Sistema utilizado en un minisúper para la gestión de productos, usuarios y recursos en el almacén. Desarrollado con tecnologías web y empaquetado con Electron." type="text" />
                 <div class="flex justify-between">
                     <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
-                        <img src="/src/assets/logos/github_logo.svg" width="25px" alt="GitHub"/>
+                        <Github_logo width="25px"/>
                         <Text text="Ver código" type="mini" />
                     </div>
                     <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
-                        <img src="/src/assets/icons/web_icon.svg" class="w-[25px]" alt="Sitio Web"/>
+                        <Web_icon width="25px"/>
                         <Text text="Visitar" type="mini" />
                     </div>
                 </div>
