relative routes fixed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import { Image } from 'astro:assets';
-import Layout from "/src/layouts/layout.astro"
-import About from "/src/sections/about.astro";
-import Experience from "/src/sections/experience.astro";
-import Projects from "/src/sections/projects.astro";
-import Skills from "/src/sections/skills.astro";
-import Section from "/src/components/section.astro";
-import ButtonToolTip from "/src/components/buttonToolTip.astro";
-import ButtonExpand from "/src/components/buttonExpand.astro";
+import Layout from "../layouts/Layout.astro"
+import About from "../sections/about.astro";
+import Experience from "../sections/experience.astro";
+import Projects from "../sections/projects.astro";
+import Skills from "../sections/skills.astro";
+import Section from "../components/section.astro";
+import ButtonToolTip from "../components/buttonToolTip.astro";
+import ButtonExpand from "../components/buttonExpand.astro";
 import Text from "../components/text.astro";
 import Profile_Photo from "../assets/photos/profile_photo.jpg";
 import Github_logo from "../assets/logos/github_logo.svg";
