--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -13,13 +13,14 @@ import Electron_logo from "../assets/logos/electron_logo.svg"
 import Sql_logo from "../assets/logos/sql_logo.svg";
 import Windows_logo from "../assets/logos/windows_logo.svg";
 import Astro_logo from "../assets/logos/astro_logo.svg";
+import Tekkure_demo from "../assets/demos/tekkure_demo.jpg";
 ---
 <Section id="projects" mt="true" mb="true">
     <TitleSection imageSrc={Code_icon} title="Proyectos"/>
     <div class="w-full max-w-[1400px] px-4 mx-auto flex flex-col gap-10 items-center justify-center">
         <div class="w-full bg-backgroundPrimary rounded-2xl p-5 flex flex-col md:flex-row gap-6 shadow-xl">
             <div class="w-full md:w-1/2 h-[250px] bg-white rounded-xl overflow-hidden flex items-center justify-center">
-                <Image src="/src/assets/demos/tekkure_demo.jpg" class="object-cover w-full h-full" alt=""/>
+                <Image src={Tekkure_demo} class="object-cover w-full h-full" alt=""/>
             </div>
             <div class="w-full md:w-1/2 flex flex-col gap-4 justify-between">
                 <div class="flex flex-row justify-between flex-wrap">
