index page fixed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,8 @@ import Linkedin_logo from "../assets/logos/linkedin_logo.svg";
 import Email_icon from "../assets/icons/email_icon.svg";
 import Map_icon from "../assets/icons/map_icon.svg";
 import Phone_icon from "../assets/icons/phone_icon.svg";
-import adardev_logo from "../assets/logos/adardev_logo.svg";
+import Adardev_logo from "../assets/logos/adardev_logo.svg";
+import Cv_icon from "../assets/icons/cv_icon.svg";
 ---
 <Layout orientation="row" align="center">
     <Section mt="true">
@@ -27,21 +28,21 @@ import adardev_logo from "../assets/logos/adardev_logo.svg";
             <Section extraClass="flex flex-col sm:flex-row justify-between w-full" padding="false">
                 <Section extraClass="flex flex-col items-center sm:items-start" padding="false">
                     <Text type="title" text="Hola, soy adardev"/>
-                    <Text type="subtitle" text="Desarrollador Web y Movil"/>
+                    <Text type="subTitle" text="Desarrollador Web y Movil"/>
                 </Section>
                 <Section extraClass="mt-4 sm:mt-0 flex justify-center sm:justify-end" padding="false">
-                  <ButtonToolTip iconSrc="../assets/icons/cv_icon.svg" label="Ver curriculum Vitae" link="/cvs/adardevCV.pdf"/>
+                  <ButtonToolTip iconSrc={Cv_icon} label="Ver curriculum Vitae" link="/cvs/adardevCV.pdf"/>
                 </Section>
             </Section>
         </Section>
         <Section extraClass="flex flex-col sm:flex-row gap-4 sm:gap-5 justify-center sm:justify-start" padding="false">
-            <ButtonExpand link="https://adardev.com" iconSrc={adardev_logo} label="adardev.com" hoverClass="hover:w-[8.3rem]"/>
-            <ButtonExpand link="https://github.com/adardev" iconSrc={Github_logo} label="/adardev" hoverClass="hover:w-[7.2rem]" altIconSrc={null}/>
-            <ButtonExpand link="https://www.linkedin.com/in/adardev" iconSrc={Linkedin_logo} label="/in/adardev" hoverClass="hover:w-[8.3rem]"/>
-            <ButtonExpand link="https://www.youtube.com/@adardev1" iconSrc={Youtube_logo} label="/efwfwef" hoverClass="hover:w-[7.8rem]"/>
-            <ButtonExpand link="https://maps.app.goo.gl/jgDoBZkpe1rsiSNm7" iconSrc={Map_icon} label="Guadalajara, México" hoverClass="hover:w-[12.8rem]"/>
-            <ButtonExpand link="mailto:adarlopz.dev@gmail.com" iconSrc={Email_icon} label="adarlopz.dev@gmail.com" hoverClass="hover:w-[16rem]" altIconSrc="/src/assets/icons/email_icon.svg"/>
-            <ButtonExpand link="tel:+" iconSrc={Phone_icon} label="+52 5512 3456" hoverClass="hover:w-[11.8rem]"/>
+            <ButtonExpand link="https://adardev.com" iconSrc={Adardev_logo} label="adardev.com" hoverClass="hover:w-[8.8rem]"/>
+            <ButtonExpand link="https://github.com/adardev" iconSrc={Github_logo} label="/adardev" hoverClass="hover:w-[7rem]" altIconSrc={null}/>
+            <ButtonExpand link="https://www.linkedin.com/in/adardev" iconSrc={Linkedin_logo} label="/in/adardev" hoverClass="hover:w-[8.1rem]"/>
+            <ButtonExpand link="https://www.youtube.com/@adardev1" iconSrc={Youtube_logo} label="/@adardev1" hoverClass="hover:w-[7.9rem]"/>
+            <ButtonExpand link="https://maps.app.goo.gl/jgDoBZkpe1rsiSNm7" iconSrc={Map_icon} label="Guadalajara, México" hoverClass="hover:w-[12rem]"/>
+            <ButtonExpand link="mailto:adarlopz.dev@gmail.com" iconSrc={Email_icon} label="adarlopz.dev@gmail.com" hoverClass="hover:w-[14.4rem]" altIconSrc="/src/assets/icons/email_icon.svg"/>
+            <ButtonExpand link="tel:+" iconSrc={Phone_icon} label="+52 56 6588 6939" hoverClass="hover:w-[10.65rem]"/>
         </Section>
     </Section>
     <About/>
