--- a/src/sections/experiences/freelance.astro
+++ b/src/sections/experiences/freelance.astro
@@ -1,11 +1,14 @@
-<div class="relative pl-16 group">
-    <div class="absolute left-[-0.6rem] top-[0.5rem] z-20">
-        <div class="w-4 h-4 bg-primary rounded-full flex items-center justify-center text-xs font-semibold text-transparent transition-all duration-500 ease-in-out group-hover:w-16 group-hover:h-7 group-hover:text-white group-hover:bg-primary group-hover:shadow-md">
+---
+import Section from "../../components/section.astro";
+---
+<Section extraClass="relative pl-16 group" padding="false">
+    <Section extraClass="absolute left-[-1.6rem] top-[0.5rem] z-20" padding="false">
+        <Section extraClass="w-4 h-4 bg-primary rounded-full flex items-center justify-center text-xs font-semibold text-transparent transition-all duration-500 ease-in-out group-hover:w-16 group-hover:h-7 group-hover:text-white group-hover:bg-primary group-hover:shadow-md" padding="false">
             2022
-        </div>
-    </div>
-    <div class="flex flex-row justify-between">
-        <div>
+        </Section>
+    </Section>
+    <Section extraClass="flex flex-row justify-between" padding="false">
+        <Section padding="false">
             <p class="text-2xl font-semibold text-secondary">Freelance</p>
             <p class="text-lg font-medium text-secondary">Desarrollo Web y movil</p>
             <p class="mt-2 text-neutral">
@@ -13,8 +16,8 @@
                 para seguir aprendiendo y seguir desarrollando mis habilidades, muchas de estas eran webs o aplicaciones
                 móviles en los de que me encargaba del desarrollo por completo.
             </p>
-        </div>
-        <div class="w-48 h-16">
-        </div>
-    </div>
-</div>
+        </Section>
+        <Section extraClass="w-48 h-16" padding="false">
+        </Section>
+    </Section>
+</Section>
