--- a/src/sections/skills.astro
+++ b/src/sections/skills.astro
@@ -112,8 +112,8 @@ import Js_logo from "../assets/logos/js_logo.svg";
             </a>
         </div>
     </div>
-    <div class="flex flex-row justify-center ml-8">
-        <div class="flex flex-row bg-[#002a2e] m-8 mx-0 my-0 p-4 gap-4 rounded-tl-3xl">
+    <div class="flex flex-row justify-center ml-0">
+        <div class="flex flex-row bg-[#002a2e] m-8 ml-0 mx-0 my-0 p-4 gap-4 rounded-tl-3xl">
             <a class="group [perspective:1000px] cursor-pointer">
                 <div class="relative w-24 h-24 transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [backface-visibility:hidden]">
@@ -162,7 +162,7 @@ import Js_logo from "../assets/logos/js_logo.svg";
                 </div>
             </a>
         </div>
-        <div class="flex flex-row bg-[#002a2e] m-8 mx-0 my-0 p-4 gap-4 rounded-bl-3xl">
+        <div class="flex flex-row bg-[#002a2e] m-8 mr-0 ml-8 my-0 p-4 gap-4 rounded-bl-3xl">
             <a class="group [perspective:1000px] cursor-pointer">
                 <div class="relative w-24 h-24 transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [backface-visibility:hidden]">
@@ -174,7 +174,7 @@ import Js_logo from "../assets/logos/js_logo.svg";
                 </div>
             </a>
         </div>
-        <div class="flex flex-row bg-[#002a2e] m-8 p-4 mr-0 my-0 gap-4 rounded-br-3xl">
+        <div class="flex flex-row bg-[#002a2e] m-8 ml-0 p-4 mr-0 my-0 gap-4 rounded-br-3xl">
             <a class="group [perspective:1000px] cursor-pointer">
                 <div class="relative w-24 h-24 transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [backface-visibility:hidden]">
@@ -335,8 +335,8 @@ import Js_logo from "../assets/logos/js_logo.svg";
             </a>
         </div>
     </div>
-    <div class="flex flex-row justify-center ml-8">
-        <div class="flex flex-row bg-[#002a2e] m-8 mx-0 mb-0 p-4 mt-0 gap-4  rounded-l-3xl">
+    <div class="flex flex-row justify-center ml-0">
+        <div class="flex flex-row bg-[#002a2e] m-8 ml-0 mx-0 mb-0 p-4 mt-0 gap-4  rounded-l-3xl">
             <a class="group [perspective:1000px] cursor-pointer">
                 <div class="relative w-24 h-24 transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [backface-visibility:hidden]">
