--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -3,89 +3,52 @@ import TitleSection from "..//components/titleSection.astro";
 import Section from "../components/section.astro";
 import Text from "../components/text.astro";
 import Code_icon from "../assets/icons/code_icon.svg";
-import { Image } from 'astro:assets';
 import Web_icon from "../assets/icons/web_icon.svg";
 import Adardev_logo from "../assets/logos/adardev_logo.svg";
 import Github_logo from "../assets/logos/github_logo.svg";
-import Tailwind_logo from "../assets/logos/tailwind_logo.svg";
 import Php_logo from "../assets/logos/php_logo.svg";
 import Electron_logo from "../assets/logos/electron_logo.svg"
 import Sql_logo from "../assets/logos/sql_logo.svg";
 import Windows_logo from "../assets/logos/windows_logo.svg";
-import Astro_logo from "../assets/logos/astro_logo.svg";
 import Tekkure_demo from "../assets/demos/tekkure_demo.jpg";
+import { Image } from 'astro:assets';
 ---
 <Section id="projects" mt="true" mb="true">
     <TitleSection imageSrc={Code_icon} title="Proyectos"/>
-    <div class="w-full max-w-[1400px] px-4 mx-auto flex flex-col gap-10 items-center justify-center">
-        <div class="w-full bg-backgroundPrimary rounded-2xl p-5 flex flex-col md:flex-row gap-6 shadow-xl">
-            <div class="w-full md:w-1/2 h-[250px] bg-white rounded-xl overflow-hidden flex items-center justify-center">
-                <Image src={Tekkure_demo} class="object-cover w-full h-full" alt=""/>
-            </div>
-            <div class="w-full md:w-1/2 flex flex-col gap-4 justify-between">
-                <div class="flex flex-row justify-between flex-wrap">
-                    <div class="flex flex-row items-center gap-5">
-                        <Adardev_logo width="50px"/>
-                        <Text text="Spotify" type="title" />
-                    </div>
-                    <div class="flex flex-row mt-4 sm:mt-0">
-                        <div class="flex flex-row gap-2">
-                            <Web_icon width="30px"/>
-                        </div>
-                        <div class="w-[2px] h-auto rounded-2xl bg-white mx-4"></div>
-                        <div class="flex flex-row gap-2">
-                            <Astro_logo width="30px"/>
-                            <Tailwind_logo width="30px"/>
-                        </div>
-                    </div>
-                </div>
-                <Text text="Aplicación que muestra estadísticas personalizadas sobre tus hábitos de escucha en Spotify y te conecta con personas con gustos musicales similares." type="text" />
-                <div class="flex justify-between">
-                    <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
-                        <Github_logo width="25px"/>
-                        <Text text="Ver código" type="mini" />
-                    </div>
-                    <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
-                        <Web_icon width="25px"/>
-                        <Text text="Visitar" type="mini" />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="w-full bg-backgroundPrimary rounded-2xl p-5 flex flex-col md:flex-row gap-6 shadow-xl">
-            <div class="w-full md:w-1/2 h-[250px] bg-white rounded-xl overflow-hidden flex items-center justify-center">
-                <img src="/src/assets/demos/tekkure_demo.jpg" alt="Preview Tekkure" class="object-cover w-full h-full"/>
-            </div>
-            <div class="w-full md:w-1/2 flex flex-col gap-4 justify-between">
-                <div class="flex flex-row justify-between flex-wrap">
-                    <div class="flex flex-row items-center gap-5">
-                        <Adardev_logo width="50px"/>
-                        <Text text="Bytemana" type="title" />
-                    </div>
-                    <div class="flex flex-row mt-4 sm:mt-0">
-                        <div class="flex flex-row gap-2">
-                            <Windows_logo width="30px"/>
-                        </div>
-                        <div class="w-[2px] h-auto rounded-2xl bg-white mx-4"></div>
-                        <div class="flex flex-row gap-2">
-                            <Php_logo width="30px"/>
-                            <Electron_logo width="30px"/>
-                            <Sql_logo width="30px"/>
-                        </div>
-                    </div>
-                </div>
-                <Text text="Sistema utilizado en un minisúper para la gestión de productos, usuarios y recursos en el almacén. Desarrollado con tecnologías web y empaquetado con Electron." type="text" />
-                <div class="flex justify-between">
-                    <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
-                        <Github_logo width="25px"/>
-                        <Text text="Ver código" type="mini" />
-                    </div>
-                    <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
-                        <Web_icon width="25px"/>
-                        <Text text="Visitar" type="mini" />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <Section extraClass="w-full bg-backgroundPrimary rounded-2xl p-5 flex flex-col md:flex-row gap-6 shadow-xl" padding="false">
+        <Section extraClass="w-full md:w-1/2 h-[250px] bg-white rounded-xl overflow-hidden flex items-center justify-center" padding="false">
+            <Image src={Tekkure_demo} alt="Preview Tekkure" class="object-cover w-full h-full"/>
+        </Section>
+        <Section extraClass="w-full md:w-1/2 flex flex-col gap-4 justify-between" padding="false">
+            <Section extraClass="flex flex-row justify-between flex-wrap" padding="false">
+                <Section extraClass="flex flex-row items-center gap-5" padding="false">
+                    <Adardev_logo width="50px"/>
+                    <Text text="Bytemana" type="title"/>
+                </Section>
+                <Section extraClass="flex flex-row mt-4 sm:mt-0" padding="false">
+                    <Section extraClass="flex flex-row gap-2" padding="false">
+                        <Windows_logo width="30px"/>
+                    </Section>
+                    <Section extraClass="w-[2px] h-auto rounded-2xl bg-white mx-4" padding="false"></Section>
+                    <Section extraClass="flex flex-row gap-2" padding="false">
+                        <Php_logo width="30px"/>
+                        <Electron_logo width="30px"/>
+                        <Sql_logo width="30px"/>
+                    </Section>
+                </Section>
+            </Section>
+            <Text text="Sistema utilizado en un minisúper para la gestión de productos, usuarios y recursos en el almacén. Desarrollado con tecnologías web y empaquetado con Electron."
+                  type="text"/>
+            <Section extraClass="flex justify-between" padding="false">
+                <Section extraClass="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors" padding="false">
+                    <Github_logo width="25px"/>
+                    <Text text="Ver código" type="mini"/>
+                </Section>
+                <Section extraClass="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors" padding="false">
+                    <Web_icon width="25px"/>
+                    <Text text="Visitar" type="mini"/>
+                </Section>
+            </Section>
+        </Section>
+    </Section>
 </Section>
