sections and text components implemented in his components

--- a/src/components/experience.astro
+++ b/src/components/experience.astro
@@ -1,5 +1,5 @@
 ---
-const {name, description, position} = Astro.props;
+const {name} = Astro.props;
 ---
 <div class="relative pl-16 group">
     <div class="absolute left-[-0.6rem] top-[0.5rem] z-20">
@@ -16,8 +16,6 @@ const {name, description, position} = Astro.props;
                 para seguir aprendiendo y seguir desarrollando mis habilidades, muchas de estas eran webs o aplicaciones
                 móviles en los de que me encargaba del desarrollo por completo.
             </p>
-        </div>
-        <div class="w-48 h-16">
         </div>
     </div>
 </div>
