--- a/src/components/text.astro
+++ b/src/components/text.astro
@@ -1,5 +1,5 @@
 ---
-const {text, mt, mb, type} = Astro.props;
+const {text, mt, mb, type, extraClass = ""} = Astro.props;
 let marginTop = "mt-none";
 let marginBottom = "mb-none";
 let textSize = "";
