--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -37,8 +37,7 @@ import { Image } from 'astro:assets';
                     </Section>
                 </Section>
             </Section>
-            <Text text="Sistema utilizado en un minisúper para la gestión de productos, usuarios y recursos en el almacén. Desarrollado con tecnologías web y empaquetado con Electron."
-                  type="text"/>
+            <Text text="Sistema utilizado en un minisúper para la gestión de productos, usuarios y recursos en el almacén. Desarrollado con tecnologías web y empaquetado con Electron." type="text"/>
             <Section extraClass="flex justify-between" padding="false">
                 <Section extraClass="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors" padding="false">
                     <Github_logo width="25px"/>
