--- a/src/sections/experiences/epam.astro
+++ b/src/sections/experiences/epam.astro
@@ -1,22 +1,22 @@
-<div class="relative pl-16 mb-12 group ">
-    <div class="absolute left-[-0.6rem] top-[0.5rem] z-20">
-        <div class="w-4 h-4 bg-primary rounded-full flex items-center justify-center text-xs font-semibold text-transparent transition-all duration-500 ease-in-out group-hover:w-16 group-hover:h-7 group-hover:text-white group-hover:bg-primary group-hover:shadow-md">
+---
+import Section from "../../components/section.astro";
+import Text from "../../components/text.astro";
+import Epam_logo from "../logos/epam_logo.svg";
+---
+<Section extraClass="relative pl-16 mb-12 group">
+    <Section extraClass="absolute left-[-0.6rem] top-[0.5rem] z-20">
+        <Section extraClass="w-4 h-4 bg-primary rounded-full flex items-center justify-center text-xs font-semibold text-transparent transition-all duration-500 ease-in-out group-hover:w-16 group-hover:h-7 group-hover:text-white group-hover:bg-primary group-hover:shadow-md">
             2025
-        </div>
-    </div>
-    <div class="flex flex-row justify-between ">
-        <div class="">
-            <p class="text-2xl font-semibold text-secondary ">EPAM Systems</p>
-            <p class="text-lg font-medium text-secondary ">JS Internship</p>
-            <p class="mt-2 text-neutral">
-                Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de
-                aplicaciones web. Mejora de un 30% en la entrega de software.
-                Implantación de medidas de integración continua y despliegue con A/B testing en más de
-                15 equipos.
-            </p>
-        </div>
-        <div>
-            <img src="/dist/logos/epam_logo.svg" class="h-16" alt="EPAM Logo"/>
-        </div>
-    </div>
-</div>
+        </Section>
+    </Section>
+    <Section extraClass="flex flex-row justify-between">
+        <Section>
+            <Text text="EPAM Systems" type="title" />
+            <Text text="JS Internship" type="text" />
+            <Text text="Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos." mt="true" type="mini" />
+        </Section>
+        <Section>
+            <Epam_logo height="16px"/>
+        </Section>
+    </Section>
+</Section>
