font defining with tailwind

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ if (align == "right") {
     <title>adardev</title>
     <ClientRouter/>
 </head>
-<body class="flex flex-col scroll-smooth bg-background min-h-screen">
+<body class="flex flex-col scroll-smooth font-['Montserrat Variable',sans-serif] bg-background min-h-screen">
 <header>
     <Section orientation="row" align="center">
         <Section padding="false">
